--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,11 +6,21 @@ Documentation:
   Enabled: False
 HashSyntax:
   Enabled: False
-SpaceBeforeFirstArg:
+Style/SpaceBeforeFirstArg:
   Enabled: false
 AsciiComments:
   Enabled: false
+Metrics/AbcSize:
+  Enabled: false
+Metrics/BlockLength:
+  Enabled: false
 Metrics/CyclomaticComplexity:
-  Max: 10
+  Enabled: false
 Metrics/MethodLength:
-  Max: 20
+  Enabled: false
+Metrics/ModuleLength:
+  Enabled: false
+Metrics/PerceivedComplexity:
+  Enabled: false
+Style/FrozenStringLiteralComment:
+  Enabled: false
