Set rubocop PreferredDelimiters for %w to []
Rubocop < 0.42 prefers () by default for array literals, but the current version (and the ruby
style guide) recommends [].

See bbatsov/rubocop#4039

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,9 @@ Metrics/PerceivedComplexity:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
+Style/PercentLiteralDelimiters:
+  PreferredDelimiters:
+    '%w': '[]'
 Style/SpaceBeforeFirstArg:
   Enabled: false
 Style/SymbolArray:
